# nQueens

./: CMakeLists.txt  main.cpp  nQueens_test.cpp  nqueens.cpp  nqueens.h
